getting matrix
