# Source/DocuEye.ModelKeeper.Application/Queries/GetDeploymentNodeRelationships/DeploymentNodeRelationshipItem.cs
@@ -1,0 +1,12 @@
+﻿using System;
+using System.Collections.Generic;
+using System.Text;
+
+namespace DocuEye.ModelKeeper.Application.Queries.GetDeploymentNodeRelationships
+{
+    public class DeploymentNodeRelationshipItem
+    {
+        public string Technology {  get; set; }
+        public IList<string> Descriptions { get; set; }
+    }
+}
